# partsix

./: .gitignore  config.py  main.py  pyproject.toml
app/dashboard/: routes.py
app/db/: __init__.py  database.py  utils.py
app/home/: routes.py
app/product/: dependencies.py  exceptions.py  models.py  repository.py  routes.py  schemas.py  serializers.py  services.py  utils.py
templates/: index.html
templates/base/: footer.html  header.html  index.html  shipping.html
templates/base/_includes/: _header_menu.html
templates/dashboard/: index.html
templates/dashboard/_includes/: _banner.html  _blog.html  _categories.html  _deal_of_day.html  _discount_banner.html  _populars.html  _populars_with_category.html  _slider.html
templates/dashboard/modals/: entry.html  quickview.html
templates/home/: footer.html  header.html  index.html
templates/home/_includes/: _populars_with_category.html  _product_showsale.html  _top_sale.html
templates/product/details/: index.html
templates/product/details/_includes/: _breadcrumb.html  _general.html  _info.html  _media.html  _options.html  _recomended.html  _recomended_product.html  _recommended.html
