[tool.poetry]
name = "partsix"
version = "0.1.0"
description = ""
authors = ["sdfy-fly <rozhov25@bk.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
psycopg2 = "^2.9.9"
fastapi = "^0.105.0"
uvicorn = {extras = ["standard"], version = "^0.24.0.post1"}
sqlalchemy = "^2.0.23"
python-dotenv = "^1.0.0"
asyncpg = "^0.29.0"
alembic = "^1.13.0"
jinja2 = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
